--- a/Multitenancy/ZambeziDigital.Multitenancy.csproj
+++ b/Multitenancy/ZambeziDigital.Multitenancy.csproj
@@ -24,5 +24,6 @@
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Models\Isolated\" />
+      <Folder Include="Services\Server\" />
     </ItemGroup>
 </Project>
