--- a/Authentication/ZambeziDigital.Authentication.csproj
+++ b/Authentication/ZambeziDigital.Authentication.csproj
@@ -4,6 +4,14 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+        <Title>Zambezi Digital Authentication</Title>
+        <Company>Zambezi Digital</Company>
+        <Authors>Ittai Tumelo</Authors>
+        <Copyright>Zanbezi Digital</Copyright>
+        <Description>For Authentication with Individual Accounts and Cokies</Description>
+        <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+        <PackageIcon>logo.png</PackageIcon>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.5" />
@@ -22,5 +30,11 @@
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Services\Server\" />
+    </ItemGroup>
+    <ItemGroup>
+      <None Include="..\logo.png">
+        <Pack>True</Pack>
+        <PackagePath>\</PackagePath>
+      </None>
     </ItemGroup>
 </Project>
