--- a/BasicAccess/ZambeziDigital.BasicAccess.csproj
+++ b/BasicAccess/ZambeziDigital.BasicAccess.csproj
@@ -4,6 +4,12 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+        <Title>Zambezi Digital Basics</Title>
+        <Copyright>Zambezi Digital</Copyright>
+        <PackageIcon>logo.png</PackageIcon>
+        <Company>Zambezi Digital</Company>
+        <Authors>Ittai Tumelo</Authors>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.5" />
@@ -19,5 +25,11 @@
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Services\Server\" />
+    </ItemGroup>
+    <ItemGroup>
+      <None Include="..\logo.png">
+        <Pack>True</Pack>
+        <PackagePath>\</PackagePath>
+      </None>
     </ItemGroup>
 </Project>
