--- a/BasicAccess/ZambeziDigital.BasicAccess.csproj
+++ b/BasicAccess/ZambeziDigital.BasicAccess.csproj
@@ -10,6 +10,7 @@
         <PackageIcon>logo.png</PackageIcon>
         <Company>Zambezi Digital</Company>
         <Authors>Ittai Tumelo</Authors>
+        <Version>1.0.1</Version>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.5" />
