--- a/Server/ZambeziDigital.Server.csproj
+++ b/Server/ZambeziDigital.Server.csproj
@@ -4,21 +4,30 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Title>Server Base COnfiguration with Generic Model</Title>
+        <Authors>Ittai Tumelo</Authors>
+        <Description>This package has the base Controler model that can be used to speed track the creation of crud operations of a model</Description>
+        <Copyright>Zambezi Digital</Copyright>
+        <PackageIcon>logo.png</PackageIcon>
+        <PackageTags>Server, ASPNet, API</PackageTags>
+        <PackageReleaseNotes>Initial </PackageReleaseNotes>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="MailKit" Version="4.6.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+       
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Authentication\ZambeziDigital.Authentication.csproj" />
       <ProjectReference Include="..\BasicAccess\ZambeziDigital.BasicAccess.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="logo.png">
+        <Pack>True</Pack>
+        <PackagePath></PackagePath>
+      </None>
     </ItemGroup>
 
 </Project>
