--- a/ZambeziDigital.Management.Server/ZambeziDigital.Management.Server.csproj
+++ b/ZambeziDigital.Management.Server/ZambeziDigital.Management.Server.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.1" />
+        <PackageReference Include="System.Reflection.TypeExtensions" Version="4.7.0" />
     </ItemGroup>
 
     <ItemGroup>
