--- a/ZambeziDigital.Base.Implementation/ZambeziDigital.Base.Implementation.csproj
+++ b/ZambeziDigital.Base.Implementation/ZambeziDigital.Base.Implementation.csproj
@@ -7,7 +7,7 @@
         <Title>ZambeziDigital.Base.Implementation</Title>
         <Authors>Ittai Tumelo</Authors>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>8.8.0</Version>
+        <Version>8.8.2</Version>
         <PackageIcon>logo.png</PackageIcon>
     </PropertyGroup>
 
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.10" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
     </ItemGroup>
